[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/GUITheme.tres" type="Theme" id=1]
[ext_resource path="res://objects/PopupDialogTwoChoices.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/Inter-SemiBold-slnt=0.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 3 )

[node name="PopupDialogTwoChoices" type="PanelContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -67.5
margin_right = 250.0
margin_bottom = 69.5
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 400.0
margin_bottom = 142.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 390.0
margin_bottom = 137.0
custom_constants/separation = 25
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 380.0
margin_bottom = 47.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer2"]
margin_left = 15.0
margin_top = 15.0
margin_right = 365.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
autowrap = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 380.0
margin_bottom = 127.0
custom_constants/margin_right = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_left = 15.0
margin_right = 365.0
margin_bottom = 40.0
custom_constants/separation = 40
alignment = 1

[node name="Button1" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 15.0
margin_right = 155.0
margin_bottom = 40.0
rect_min_size = Vector2( 140, 40 )

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 195.0
margin_right = 335.0
margin_bottom = 40.0
rect_min_size = Vector2( 140, 35 )
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
